--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -4,7 +4,7 @@
 windowrule = match:class ^()$, match:title ^()$, no_blur on
 
 # Disable blur for every window
-windowrule = match:class .*, no_blur on
+#windowrule = match:class .*, no_blur on
 
 # Floating
 windowrule = match:title ^(Open File)(.*)$, center on
