--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -1,17 +1,17 @@
 # MONITOR CONFIG
 monitor=,preferred,auto,1
 
-gesture = 3, swipe, move,
-gesture = 3, pinch, float
-gesture = 4, horizontal, workspace
-gesture = 4, up, dispatcher, global, quickshell:overviewWorkspacesToggle
-gesture = 4, down, dispatcher, global, quickshell:overviewWorkspacesClose
+#gesture = 3, swipe, move,
+#esture = 3, pinch, float
+gesture = 3, horizontal, workspace
+gesture = 3, up, dispatcher, global, quickshell:overviewWorkspacesToggle
+gesture = 3, down, dispatcher, global, quickshell:overviewWorkspacesClose
 gestures {
-    workspace_swipe_distance = 700
-    workspace_swipe_cancel_ratio = 0.2
-    workspace_swipe_min_speed_to_force = 5
-    workspace_swipe_direction_lock = true
-    workspace_swipe_direction_lock_threshold = 10
+    workspace_swipe_distance = 100
+    workspace_swipe_cancel_ratio = 0.1
+    workspace_swipe_min_speed_to_force = 1
+    workspace_swipe_direction_lock = false
+    workspace_swipe_direction_lock_threshold = 5
     workspace_swipe_create_new = true
 }
 
@@ -56,7 +56,7 @@ decoration {
         xray = true
         special = false
         new_optimizations = true
-        size = 10
+        size = 6
         passes = 3
         brightness = 1
         noise = 0.05
