--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -58,22 +58,22 @@ bind = Ctrl+Super, P, global, quickshell:panelFamilyCycle # Cycle panel family
 ##! Utilities
 # Screenshot, Record, OCR, Color picker, Clipboard history
 bindd = Super, V, Copy clipboard history entry, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || cliphist list | fuzzel --match-mode fzf --dmenu | cliphist decode | wl-copy # [hidden] Clipboard history >> clipboard (fallback)
-bindd = Super, Period, Copy an emoji, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || ~/.config/hypr/hyprland/scripts/fuzzel-emoji.sh copy # [hidden] Emoji >> clipboard (fallback)
-bind = Super+Shift, S, global, quickshell:regionScreenshot # Screen snip
-bind = Super+Shift, S, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || hyprshot --freeze --clipboard-only --mode region --silent # [hidden] Screen snip (fallback)
-bind = Super+Shift, A, global, quickshell:regionSearch # Google Lens
-bind = Super+Shift, A, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || ~/.config/hypr/hyprland/scripts/snip_to_search.sh # [hidden] Google Lens (fallback)
+#bindd = Super+Alt, Print, Copy an emoji, exec, qs -c $qsConfig ipc call TEST_ALIVE || pkill fuzzel || ~/.config/hypr/hyprland/scripts/fuzzel-emoji.sh copy # [hidden] Emoji >> clipboard (fallback)
+bind = Super, Print, global, quickshell:regionScreenshot # Screen snip
+#bind = Super+Shift, S, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || hyprshot --freeze --clipboard-only --mode region --silent # [hidden] Screen snip (fallback)
+bind = Super+Alt, Print, global, quickshell:regionSearch # Google Lens
+#bind = Super+Shift, A, exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || ~/.config/hypr/hyprland/scripts/snip_to_search.sh # [hidden] Google Lens (fallback)
 # OCR
-bind = Super+Shift, X, global, quickshell:regionOcr # Character recognition >> clipboard
-bind = Super+Shift, T, global, quickshell:regionOcr # [hidden]
-bind = Super+Shift, X,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
-bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
+bind = Super+Shift, Print, global, quickshell:regionOcr # Character recognition >> clipboard
+#bind = Super+Shift, T, global, quickshell:regionOcr # [hidden]
+#bind = Super+Shift, X,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
+#bind = Super+Shift, T,exec, qs -c $qsConfig ipc call TEST_ALIVE || pidof slurp || grim -g "$(slurp $SLURP_ARGS)" "/tmp/ocr_image.png" && tesseract "/tmp/ocr_image.png" stdout -l $(tesseract --list-langs | awk 'NR>1{print $1}' | tr '\\n' '+' | sed 's/\\+$/\\n/') | wl-copy && rm "/tmp/ocr_image.png" # [hidden]
 # Color picker
-bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
+#bindd = Super+Shift, C, Color picker, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 # Fullscreen screenshot
-bindl = ,Print,exec,grim - | wl-copy # Screenshot >> clipboard
-bindln = Ctrl,Print, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file (file)
-bindln = Ctrl,Print,exec,grim - | wl-copy # [hidden] Screenshot >> clipboard & file (clipboard)
+#bindl = Super+Ctrl, Print,exec,grim - | wl-copy # Screenshot >> clipboard
+bindln = ,Print, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file (file)
+#bindln = Ctrl,Print,exec,grim - | wl-copy # [hidden] Screenshot >> clipboard & file (clipboard)
 # Recording stuff
 bindl = Super+Shift, R, global, quickshell:regionRecord # Record region (no sound)
 bindl = Super+Shift, R, exec, qs -c $qsConfig ipc call TEST_ALIVE || ~/.config/quickshell/$qsConfig/scripts/videos/record.sh # [hidden] Record region (no sound) (fallback)
@@ -91,17 +91,17 @@ bindm = Super, mouse:272, movewindow # Move
 bindm = Super, mouse:274, movewindow # [hidden]
 bindm = Super, mouse:273, resizewindow # Resize
 #/# bind = Super, ←/↑/→/↓,, # Focus in direction
-bind = Super, Left, movefocus, l # [hidden]
-bind = Super, Right, movefocus, r # [hidden]
-bind = Super, Up, movefocus, u # [hidden]
-bind = Super, Down, movefocus, d # [hidden]
+#bind = Super, Left, movefocus, l # [hidden]
+#bind = Super, Right, movefocus, r # [hidden]
+#bind = Super, Up, movefocus, u # [hidden]
+#bind = Super, Down, movefocus, d # [hidden]
 bind = Super, BracketLeft, movefocus, l # [hidden]
 bind = Super, BracketRight, movefocus, r # [hidden]
 #/# bind = Super+Shift, ←/↑/→/↓,, # Move in direction
-bind = Super+Shift, Left, movewindow, l # [hidden]
-bind = Super+Shift, Right, movewindow, r # [hidden]
-bind = Super+Shift, Up, movewindow, u # [hidden]
-bind = Super+Shift, Down, movewindow, d # [hidden]
+#bind = Super+Shift, Left, movewindow, l # [hidden]
+#bind = Super+Shift, Right, movewindow, r # [hidden]
+#bind = Super+Shift, Up, movewindow, u # [hidden]
+#bind = Super+Shift, Down, movewindow, d # [hidden]
 bind = Alt, F4, killactive, # [hidden] Close (Windows)
 bind = Super, Q, killactive, # Close
 bind = Super+Shift+Alt, Q, exec, hyprctl kill # Forcefully zap a window
@@ -143,22 +143,18 @@ bind = Super+Alt, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
 # #/# bind = Super+Shift, Scroll ↑/↓,, # Send to workspace left/right
-bind = Super+Shift, mouse_down, movetoworkspace, r-1 # [hidden]
-bind = Super+Shift, mouse_up, movetoworkspace, r+1 # [hidden]
-bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
-bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
+#bind = Super+Shift, mouse_down, movetoworkspace, r-1 # [hidden]
+#bind = Super+Shift, mouse_up, movetoworkspace, r+1 # [hidden]
+#bind = Super+Alt, mouse_down, movetoworkspace, -1 # [hidden]
+#bind = Super+Alt, mouse_up, movetoworkspace, +1 # [hidden]
 
 #/# bind = Super+Shift, Page_↑/↓,, # Send to workspace left/right
-bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
-bind = Super+Alt, Page_Up, movetoworkspace, -1 # [hidden]
-bind = Super+Shift, Page_Down, movetoworkspace, r+1  # [hidden]
-bind = Super+Shift, Page_Up, movetoworkspace, r-1  # [hidden]
-bind = Ctrl+Super+Shift, Right, movetoworkspace, r+1 # [hidden]
-bind = Ctrl+Super+Shift, Left, movetoworkspace, r-1 # [hidden]
-
-bind = Super+Alt, S, movetoworkspacesilent, special # Send to scratchpad
-
-bind = Ctrl+Super, S, togglespecialworkspace, # [hidden]
+#bind = Super+Alt, Page_Down, movetoworkspace, +1 # [hidden]
+#bind = Super+Alt, Page_Up, movetoworkspace, -1 # [hidden]
+#bind = Super+Shift, Page_Down, movetoworkspace, r+1  # [hidden]
+#bind = Super+Shift, Page_Up, movetoworkspace, r-1  # [hidden]
+bind = Super+Ctrl, Right, movetoworkspace, r+1 # [hidden]
+bind = Super+Ctrl, Left, movetoworkspace, r-1 # [hidden]
 
 ##! Workspace
 # Switching
@@ -187,28 +183,30 @@ bindp = Super, code:81, exec, ~/.config/hypr/hyprland/scripts/workspace_action.s
 bindp = Super, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_action.sh workspace 10 # [hidden]
 
 #/# bind = Ctrl+Super, ←/→,, # Focus left/right
-bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
-bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
+#bind = Ctrl+Super, Right, workspace, r+1 # [hidden]
+#bind = Ctrl+Super, Left, workspace, r-1 # [hidden]
 #/# bind = Ctrl+Super+Alt, ←/→,, # [hidden] Focus busy left/right
-bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
-bind = Ctrl+Super+Alt, Left, workspace, m-1 # [hidden]
+#bind = Ctrl+Super+Alt, Right, workspace, m+1 # [hidden]
+#bind = Ctrl+Super+Alt, Left, workspace, m-1 # [hidden]
 #/# bind = Super, Page_↑/↓,, # Focus left/right
-bind = Super, Page_Down, workspace, +1 # [hidden]
-bind = Super, Page_Up, workspace, -1 # [hidden]
-bind = Ctrl+Super, Page_Down, workspace, r+1 # [hidden]
-bind = Ctrl+Super, Page_Up, workspace, r-1 # [hidden]
+#bind = Super, Page_Down, workspace, +1 # [hidden]
+#bind = Super, Page_Up, workspace, -1 # [hidden]
+bind = Super, Right, workspace, r+1 # [hidden]
+bind = Super, Left, workspace, r-1 # [hidden]
 #/# bind = Super, Scroll ↑/↓,, # Focus left/right
-bind = Super, mouse_up, workspace, +1 # [hidden]
-bind = Super, mouse_down, workspace, -1 # [hidden]
-bind = Ctrl+Super, mouse_up, workspace, r+1 # [hidden]
-bind = Ctrl+Super, mouse_down, workspace, r-1 # [hidden]
+#bind = Super, mouse_up, workspace, +1 # [hidden]
+#bind = Super, mouse_down, workspace, -1 # [hidden]
+#bind = Ctrl+Super, mouse_up, workspace, r+1 # [hidden]
+#bind = Ctrl+Super, mouse_down, workspace, r-1 # [hidden]
 ## Special
-bind = Super, S, togglespecialworkspace, # Toggle scratchpad
-bind = Super, mouse:275, togglespecialworkspace, # [hidden]
-bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
-bind = Ctrl+Super, BracketRight, workspace, +1 # [hidden]
-bind = Ctrl+Super, Up, workspace, r-5 # [hidden]
-bind = Ctrl+Super, Down, workspace, r+5 # [hidden]
+bind = Super+Ctrl, Return, togglespecialworkspace, # Toggle scratchpad
+bind = Super, End, togglespecialworkspace, # Toggle scratchpad
+bind = Super+Ctrl, Home, movetoworkspacesilent, special # Send to scratchpad
+#bind = Super, mouse:275, togglespecialworkspace, # [hidden]
+#bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
+#bind = Ctrl+Super, BracketRight, workspace, +1 # [hidden]
+#bind = Ctrl+Super, Up, workspace, r-5 # [hidden]
+#ind = Ctrl+Super, Down, workspace, r+5 # [hidden]
 
 ##! Virtual machines
 bind = Super+Alt, F1, exec, notify-send 'Entered Virtual Machine submap' 'Keybinds disabled. Hit Super+Alt+F1 to escape' -a 'Hyprland' && hyprctl dispatch submap virtual-machine # Disable keybinds
