adding prayer widgets + some config changes

--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -154,7 +154,9 @@ bind = Super+Alt, code:90, exec, ~/.config/hypr/hyprland/scripts/workspace_actio
 #bind = Super+Shift, Page_Down, movetoworkspace, r+1  # [hidden]
 #bind = Super+Shift, Page_Up, movetoworkspace, r-1  # [hidden]
 bind = Super+Ctrl, Right, movetoworkspace, r+1 # [hidden]
-bind = Super+Ctrl, Left, movetoworkspace, r-1 # [hidden]
+bind = Super+Alt, Right, movetoworkspace, r+1 # [hidden]
+bind = Super+Ctrl, Right, movetoworkspace, r+1 # [hidden]
+bind = Super+Alt, Left, movetoworkspace, r-1 # [hidden]
 
 ##! Workspace
 # Switching
@@ -201,7 +203,8 @@ bind = Super, Left, workspace, r-1 # [hidden]
 ## Special
 bind = Super+Ctrl, Return, togglespecialworkspace, # Toggle scratchpad
 bind = Super, End, togglespecialworkspace, # Toggle scratchpad
-bind = Super+Ctrl, Home, movetoworkspacesilent, special # Send to scratchpad
+bind = Super+Alt, End, movetoworkspacesilent, special # Send to scratchpad
+bind = Super+Alt, Return, movetoworkspacesilent, special # Send to scratchpad
 #bind = Super, mouse:275, togglespecialworkspace, # [hidden]
 #bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
 #bind = Ctrl+Super, BracketRight, workspace, +1 # [hidden]
