1st Stable  : Prayer & Anime Services stable state

--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -120,19 +120,19 @@ animations {
 }
 
 input {
-    kb_layout = us
+    kb_layout = us, ara
     numlock_by_default = true
-    repeat_delay = 250
-    repeat_rate = 35
-
+    repeat_delay = 200
+    repeat_rate = 40
+    kb_options = grp:alt_caps_toggle
     follow_mouse = 1
     off_window_axis_events = 2
 
     touchpad {
         natural_scroll = yes
-        disable_while_typing = true
+        disable_while_typing = false
         clickfinger_behavior = true
-        scroll_factor = 0.7
+        scroll_factor = 1.1
     }
 }
 
