--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -42,8 +42,11 @@ windowrule = match:class kcm_.*, float on
 windowrule = match:class .*bluedevilwizard, float on
 windowrule = match:title .*Welcome, float on
 windowrule = match:title ^(illogical-impulse Settings)$, float on
+windowrule = match:title ^(illogical-impulse Settings)$, size (monitor_w*.90) (monitor_h*.85)
 windowrule = match:title .*Shell conflicts.*, float on
+windowrule = match:class xdg-desktop-portal-gtk, float on
 windowrule = match:class org.freedesktop.impl.portal.desktop.kde, float on
+windowrule = match:class xdg-desktop-portal-gtk, size (monitor_w*.60) (monitor_h*.65)
 windowrule = match:class org.freedesktop.impl.portal.desktop.kde, size (monitor_w*.60) (monitor_h*.65)
 windowrule = match:class ^(Zotero)$, float on
 windowrule = match:class ^(Zotero)$, size (monitor_w*.45) (monitor_h*.45)
@@ -59,6 +62,10 @@ windowrule = match:title ^(Copying — Dolphin)$, move 40 80
 # Tiling
 windowrule = match:class ^dev\.warp\.Warp$, tile on
 
+
+windowrule = match:class com.github.aliencoweatcake.imageviewer, center on
+windowrule = match:class com.github.aliencoweatcake.imageviewer, float on
+windowrule = match:class com.github.aliencoweatcake.imageviewer, size (monitor_w*.96) (monitor_h*.90)
 # Picture-in-Picture
 windowrule = match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$, float on
 windowrule = match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$, keep_aspect_ratio on
