--- a/dots/.config/hypr/hyprland/keybinds.conf
+++ b/dots/.config/hypr/hyprland/keybinds.conf
@@ -205,7 +205,7 @@ bind = Super, Left, workspace, r-1 # [hidden]
 bind = Super+Ctrl, Return, togglespecialworkspace, # Toggle scratchpad
 bind = Super, End, togglespecialworkspace, # Toggle scratchpad
 bind = Super+Alt, End, movetoworkspacesilent, special # Send to scratchpad
-bind = Super+Alt, Return, movetoworkspacesilent, special # Send to scratchpad
+# bind = Super+Alt, Return, movetoworkspacesilent, special # Send to scratchpad
 #bind = Super, mouse:275, togglespecialworkspace, # [hidden]
 #bind = Ctrl+Super, BracketLeft, workspace, -1 # [hidden]
 #bind = Ctrl+Super, BracketRight, workspace, +1 # [hidden]
@@ -247,7 +247,7 @@ bindl= ,XF86AudioPrev, exec, playerctl previous # [hidden]
 bind = Super+Shift+Alt, mouse:275, exec, playerctl previous # [hidden]
 bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
 bindl= Super+Shift, B, exec, playerctl previous # Previous track
-bindl= Super+Shift, P, exec, playerctl play-pause # Play/pause media
+bindl= Super+Alt, Return, exec, playerctl play-pause # Play/pause media
 bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
 bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 
