Add adhan audio as notification sound for Prayer time

--- a/dots/.config/hypr/hyprland/rules.conf
+++ b/dots/.config/hypr/hyprland/rules.conf
@@ -14,6 +14,9 @@ windowrule = match:title ^(Select a File)(.*)$, float on
 windowrule = match:title ^(Choose wallpaper)(.*)$, center on
 windowrule = match:title ^(Choose wallpaper)(.*)$, float on
 windowrule = match:title ^(Choose wallpaper)(.*)$, size (monitor_w*.60) (monitor_h*.65)
+windowrule = match:title ^(Choose Adhan)(.*)$, center on
+windowrule = match:title ^(Choose Adhan)(.*)$, float on
+windowrule = match:title ^(Choose Adhan)(.*)$, size (monitor_w*.60) (monitor_h*.65)
 windowrule = match:title ^(Open Folder)(.*)$, center on
 windowrule = match:title ^(Open Folder)(.*)$, float on
 windowrule = match:title ^(Save As)(.*)$, center on
